--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,8 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Experiences"
+  url = "#experience"
   weight = 20
 
 
@@ -30,3 +30,8 @@
 #    name = "CV"
 #    url = "files/cv.pdf"
 #    weight = 70
+
+[[main]]
+  name = "Pictures"  # A link title for your page.
+  url = "pictures/"  # The URL of your page.
+  weight = 90  # The position of your page in the menu.
