--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -154,10 +154,11 @@ section_pager = false
 docs_section_pager = true  # Display pager in Docs layout (e.g. tutorials)?
 
 # Enable in-built social sharing buttons? (true/false)
-sharing = true
+sharing = false
 
 # Link authors to their profile page? (true/false)
-link_authors = true
+link_authors = false
+
 
 # Load JS plugins
 #   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
@@ -179,6 +180,7 @@ plugins_js  = []
 
   # Citation style ("apa" or "mla")
   citation_style = "apa"
+  
 
 # Configuration of project pages.
 [projects]
