--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,7 +13,7 @@ title = "Kushin Mukherjee"
 baseurl = "https://kushinm.github.io./"
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "&copy; {year} Kushin Mukherjee"
 
 ############################
 ## Advanced options below ##
