--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,10 +14,10 @@
   weight = 20
 
 
-[[main]]
-  name = "Publications"
-  url = "#publications"
-  weight = 40
+#[[main]]
+#  name = "Publications"
+#  url = "#publications"
+#  weight = 40
 
 [[main]]
   name = "Contact"
